--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -412,7 +412,7 @@ For the details of the analysis see Appendix~\ref{apx:analysis} and \cite{gilron
 \section{Discussion}
 \label{sec:discussion}
 
-We have set out to understand which of the tests is more powerful: the accuracy test or the population test. 
+We have set out to understand which of the tests is more powerful: accuracy tests or population tests. 
 No amount of simulations can replace the insight provided by a closed-form analytic result. 
 The finite sample power of permutation tests is a formidable mathematical problem, so we currently content ourselves with simulations 
 We have concluded that the population tests are typically preferable. 
@@ -420,7 +420,7 @@ Their high dimensional versions, such as \cite{srivastava_multivariate_2007} and
 We attribute this to several effects: \newline
 (a) The discrete nature of the accuracy test in finite samples. \newline
 (b) Inefficient use of the data when validating with a holdout set. \newline
-(c) The lack of regularization in high SNR regimes (high dimension or correlations). \newline
+(c) The lack of regularization in high SNR regimes (high dimension and\slash or strong correlations). \newline
 
 
 The degree of discretization is governed by the sample size. 
