--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -425,7 +425,7 @@ We attribute this to several effects: \newline
 
 The degree of discretization is governed by the sample size. 
 For this reason, an asymptotic analysis such as \cite{ramdas_classification_2016} may uncover the holdout inefficiency, but will not uncover the discretization effect. 
-An asymptotic analysis of a finite complexity model would also fail to reveal the effect of the concentration of the resubstitution accuracy near $1$. This effect would render the resubstitution estimates a legitimate asymptotic test, and a terrible finite sample test. 
+An asymptotic analysis of a finite complexity model, such as \cite[Sec~4.3]{golland_permutation_2005}, would also fail to reveal the effect of the concentration of the resubstitution accuracy near $1$. This effect would render the resubstitution estimates a legitimate asymptotic test, and a terrible finite sample test. 
 
 The presence of heavy tails shrinks the power advantage of the population tests over accuracy tests. 
 Our empirical example suggests that even if the population test does not necessarily dominate the accuracy test in power, empirically, it does have an advantage. 
