--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -427,9 +427,9 @@ The degree of discretization is governed by the sample size.
 For this reason, an asymptotic analysis such as \cite{ramdas_classification_2016} may uncover the holdout inefficiency, but will not uncover the discretization effect. 
 An asymptotic analysis of a finite complexity model, such as \cite[Sec~4.3]{golland_permutation_2005}, would also fail to reveal the effect of the concentration of the resubstitution accuracy near $1$. This effect would render the resubstitution estimates a legitimate asymptotic test, and a terrible finite sample test. 
 
-The presence of heavy tails shrinks the power advantage of the population tests over accuracy tests. 
-Our empirical example suggests that even if the population test does not necessarily dominate the accuracy test in power, empirically, it does have an advantage. 
-
+Simulations do show cases where population tests have no advantage over accuracy tests. 
+One such scenario is when the noise is heavytailed, as seen in Figure~\ref{fig:t_null}.
+The second scenario will be discussed in Section~\ref{sec:highdim}.
 
 The practical advice for the practitioner, is that for the purpose of signal detection, there is typically a population test that is more powerful than an accuracy test. 
 The class of population tests we examined, in particular their regularized versions, are good performers in a wide range of simulation setups and empirically. 
@@ -466,29 +466,6 @@ On the other hand, based on our experience, and the reported neuroimaging exampl
 
 
 
-
-
-
-\subsection{A good accuracy test}
-For the cases a population test cannot replace an accuracy test, we collect some conclusions and best practices from our simulations.
-We give particular emphasis in this section to V-fold cross validation due to it popularity, but note that sampling the test set with replacement is actually preferable, as we discuss in Section~\ref{sec:bootstrap}.
-
-\paragraph{Sample size.} The conservativeness of accuracy tests decrease with sample size. 
-
-\paragraph{Permute features.} Permuting features, such as in \cite{golland_permutation_2005}, is easier than permuting labels. 
-It allows to preserve the balance of folds after a permutation, without refolding.
-
-\paragraph{Resubstitution accuracy in low dimension.} Resubstitution accuracy is useful in low SNR regimes, such as low dimensional problems, because it avoids cross validation without compromising power. 
-In high dimension, the power loss is considerable compared to a cross validated approach. 
-We attribute this to the compounding of discretization and concentration effects: the difference between the sampling distribution of the resubstitution accuracy is simply indistinguishable under the null and under the alternative. 
-In low dimensional problems, the discretization is less impactful, and the computational burden of cross validation can be avoided by using the resubstitution accuracy. 
-There is a fundamental difference between V-folding and resubstitution. The latter should not be thought of as the limit of the former. 
-
-\paragraph{Regularize}
-Regularizing a classifier proves crucial to detection power in low SNR regimes; in high dimension in particular. 
-We also conjecture that the power-maximizing regularization is larger than the error-minimizing regularization. 
-
-\paragraph{Don't z-score.} There is no gain in z-scoring the accuracy scores. Our motivating rational was clearly flawed. [TODO: why?]
 
 
 
@@ -636,6 +613,42 @@ The same as Table~\ref{tab:collected} for regularized (high dimensional) predict
 } 
 	\label{fig:highdim}
 \end{figure}
+
+
+
+
+
+\subsection{A good accuracy test}
+For the cases a population test cannot replace an accuracy test, we collect some conclusions and best practices from our simulations.
+We give particular emphasis in this section to V-fold cross validation due to it popularity, but note that sampling the test set with replacement is actually preferable, as we discuss in Section~\ref{sec:bootstrap}.
+
+\paragraph{Sample size.} The conservativeness of accuracy tests decrease with sample size. 
+
+\paragraph{Permute features.} Permuting features, such as in \cite{golland_permutation_2005}, is easier than permuting labels. 
+It allows to preserve the balance of folds after a permutation, without refolding.
+
+\paragraph{Resubstitution accuracy in low dimension.} Resubstitution accuracy is useful in low SNR regimes, such as low dimensional problems, because it avoids cross validation without compromising power. 
+In high dimension, the power loss is considerable compared to a cross validated approach. 
+We attribute this to the compounding of discretization and concentration effects: the difference between the sampling distribution of the resubstitution accuracy is simply indistinguishable under the null and under the alternative. 
+In low dimensional problems, the discretization is less impactful, and the computational burden of cross validation can be avoided by using the resubstitution accuracy. 
+There is a fundamental difference between V-folding and resubstitution. The latter should not be thought of as the limit of the former. 
+
+\paragraph{Regularize}
+Regularizing a classifier proves crucial to detection power in low SNR regimes; in high dimension in particular. 
+We also conjecture that the power-maximizing regularization is larger than the error-minimizing regularization. 
+
+\paragraph{Don't z-score.} There is no gain in z-scoring the accuracy scores. Our motivating rational was clearly flawed. [TODO: why?]
+
+
+
+
+
+
+
+
+
+
+
 
 
 
