--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -625,7 +625,8 @@ For the cases a population test cannot replace an accuracy test, we collect some
 
 
 \paragraph{Regularize.}
-Regularizing a classifier proves crucial to detection power in low SNR regimes; in high dimension in particular. 
+Regularization proves crucial to detection power in low signal to noise regimes: in high dimension and\slash or in the presence of strong correlations. 
+We find that the Shrinkage-based Diagonal Linear Discriminant Analysis of \cite{pang_shrinkage-based_2009} is a particularly good performer, but more research is required on this matter. 
 We also conjecture that the power-maximizing regularization is larger than the error-minimizing regularization.
 
 \paragraph{Smooth accuracy.}
