--- a/Permuting_Accuracy.bib
+++ b/Permuting_Accuracy.bib
@@ -1262,4 +1262,27 @@ Contact: tongt@hkbu.edu.hk},
   note = {R package version 1.6-7}
 }
 
+@article{breiman_using_1998,
+  title = {Using convex pseudo-data to increase prediction accuracy},
+  volume = {699},
+  timestamp = {2016-08-16T04:37:16Z},
+  number = {9},
+  urldate = {2016-08-16},
+  journal = {breast (Wis)},
+  author = {Breiman, Leo},
+  year = {1998},
+  pages = {2},
+  file = {Breiman_1998_Using convex pseudo-data to increase prediction accuracy.pdf:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/BBZ3QJDR/Breiman_1998_Using convex pseudo-data to increase prediction accuracy.pdf:application/pdf}
+}
+
+@article{REF08a,
+  title = {{{LIBLINEAR}}: {{A Library}} for {{Large Linear Classification}}},
+  volume = {9},
+  timestamp = {2016-08-16T11:13:14Z},
+  journal = {Journal of Machine Learning Research},
+  author = {Fan, Rong-En and Chang, Kai-Wei and Hsieh, Cho-Jui and Wang, Xiang-Rui and Lin, Chih-Jen},
+  year = {2008},
+  pages = {1871--1874}
+}
+
 
