--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -565,7 +565,7 @@ This was to be expected, since we already saw in (e.g.) Figure~\ref{fig:simulati
 
 We can compound the regularization with the bootstrapping from Section~\ref{sec:bootstrap}, to improve finite sample power of the accuracy tests. 
 This is done in the \emph{svm.highdim.2} and \emph{lda.highdim.4} tests. 
-The latter being the first accuracy test that achieves the same power as the best of population tests. 
+The latter being one of the very few accuracy tests that achieve the same power as population tests. 
 This is exciting news for the cases a population test cannot replace an accuracy test. 
 The implication for practitioners is that powerful accuracy tests can be constructed by sampling test sets with replacement, and regularizing the classier. 
 
