replaced heller with Szekely

--- a/Permuting_Accuracy.bib
+++ b/Permuting_Accuracy.bib
@@ -1285,4 +1285,24 @@ Contact: tongt@hkbu.edu.hk},
   pages = {1871--1874}
 }
 
+@article{szekely_brownian_2009,
+  title = {Brownian distance covariance},
+  volume = {3},
+  issn = {1932-6157, 1941-7330},
+  doi = {10.1214/09-AOAS312},
+  abstract = {Distance correlation is a new class of multivariate dependence coefficients applicable to random vectors of arbitrary and not necessarily equal dimension. Distance covariance and distance correlation are analogous to product-moment covariance and correlation, but generalize and extend these classical bivariate measures of dependence. Distance correlation characterizes independence: it is zero if and only if the random vectors are independent. The notion of covariance with respect to a stochastic process is introduced, and it is shown that population distance covariance coincides with the covariance with respect to Brownian motion; thus, both can be called Brownian distance covariance. In the bivariate case, Brownian covariance is the natural extension of product-moment covariance, as we obtain Pearson product-moment covariance by replacing the Brownian motion in the definition with identity. The corresponding statistic has an elegantly simple computing formula. Advantages of applying Brownian covariance and correlation vs the classical Pearson covariance and correlation are discussed and illustrated.},
+  language = {EN},
+  timestamp = {2016-08-19T05:05:57Z},
+  number = {4},
+  urldate = {2016-08-19},
+  journal = {The Annals of Applied Statistics},
+  author = {Sz{\'e}kely, G{\'a}bor J. and Rizzo, Maria L.},
+  month = dec,
+  year = {2009},
+  keywords = {Brownian covariance,dcor,Distance correlation,independence,Multivariate},
+  pages = {1236--1265},
+  file = {Székely_Rizzo_2009_Brownian distance covariance.pdf:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/ERR2RH2U/Székely_Rizzo_2009_Brownian distance covariance.pdf:application/pdf;Snapshot:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/PA6EQT2U/1267453933.html:text/html},
+  mrnumber = {MR2752127}
+}
+
 
