--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -460,7 +460,7 @@ Secondly, it may be argued that accuracy tests permits the separation between cl
 This is a false argument-- accuracy test do not have any more flexibility that population tests. 
 Indeed, it is possible to test for location in the same space the classifier is learned. 
 \citet{gretton_kernel_2012-1} is an example where the test for location is performed in RKHS.
-It is also possible to test for the equality of two multivariate distributions on an arbitrary, unspecified manifold \citep[e.g.][]{heller_consistent_2013}[TODO: verify].
+It is also possible to test for the equality of two multivariate distributions on an arbitrary \citep[e.g.][]{szekely_brownian_2009}.
 On the other hand, based on our experience, and the reported neuroimaging example, we find that a population test in the original feature space is a simple and powerful approach to signal detection.
 
 
